@@ -6,13 +6,12 @@ import org.yglue.flow.runtime.core.FlowExecutionResult;
 import org.yglue.flow.runtime.core.NodeExecutorRegistry;
 import org.yglue.flow.runtime.core.definition.FlowDefinition;
 import org.yglue.flow.runtime.core.definition.NodeDefinition;
-import org.yglue.flow.runtime.core.engine.interceptors.OutputMapInterceptor;
 import org.yglue.flow.runtime.core.engine.interceptors.ParamResolveInterceptor;
+import org.yglue.flow.runtime.core.executors.BranchNodeExecutor;
 import org.yglue.flow.runtime.core.executors.LogNodeExecutor;
 import org.yglue.flow.runtime.core.executors.ServiceNodeExecutor;
+import org.yglue.flow.runtime.core.executors.SetNodeExecutor;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -22,40 +21,15 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-/**
- * 端到端测试：完全剥离 LiteFlow，纯靠 AST 驱动的 GraphExecutor 集成测试。
- */
-public class GraphExecutorE2ETest {
+class GraphExecutorE2ETest {
 
     @Test
-    public void testComplexParamPlansAndBranch() throws Exception {
-        // 1. 初始化极简上下文和注册表
-        GenericApplicationContext springContext = new GenericApplicationContext();
-        springContext.refresh();
-
+    void testParamPlansAreResolvedIntoStructuredArgs() {
         NodeExecutorRegistry registry = new NodeExecutorRegistry()
-                .register("log", new LogNodeExecutor())
-                .register("service", new ServiceNodeExecutor(springContext));
+                .register("log", new LogNodeExecutor());
+        GraphExecutor executor = new GraphExecutor(registry, List.of(new ParamResolveInterceptor()));
 
-        List<NodeInterceptor> interceptors = Arrays.asList(
-                new ParamResolveInterceptor(),
-                new OutputMapInterceptor());
-
-        GraphExecutor executor = new GraphExecutor(registry, interceptors);
-
-        // 2. 构造虚拟的前端 FlowDefinition AST 描述
-        FlowDefinition flow = new FlowDefinition();
-        flow.setId("test_rule_01");
-
-        // 节点1: 一个带 ParamPlans 的日志节点（虽然Log节点不需要，但借用参数解析机制验证）
-        NodeDefinition node1 = new NodeDefinition();
-        node1.setId("node_a");
-        node1.setType("log");
-
-        Map<String, Object> node1Config = new HashMap<>();
-        // 构造 paramPlans (AST 形式)
         Map<String, Object> paramPlans = new LinkedHashMap<>();
-
         Map<String, Object> argPlan1 = new HashMap<>();
         argPlan1.put("target", "user.name");
         argPlan1.put("source", Map.of("kind", "ctx", "path", "request.username"));
@@ -64,40 +38,122 @@ public class GraphExecutorE2ETest {
         argPlan2.put("target", "user.age");
         argPlan2.put("source", Map.of("kind", "expr", "value", "10 + 8"));
 
-        paramPlans.put("argPlans", Arrays.asList(argPlan1, argPlan2));
-        node1Config.put("paramPlans", paramPlans);
-        // 如果是真实 Service 节点，还需要 inputs 声明，LogNode 忽略。
+        paramPlans.put("argPlans", List.of(argPlan1, argPlan2));
 
-        node1.setConfig(node1Config);
+        Map<String, Object> config = new HashMap<>();
+        config.put("paramPlans", paramPlans);
 
-        flow.setNodes(new ArrayList<>(Arrays.asList(node1)));
+        NodeDefinition node = new NodeDefinition("node_a", "log", config, List.of());
+        FlowDefinition flow = new FlowDefinition("test_rule_01", Map.of(), List.of(node));
 
-        // 3. 执行
-        Map<String, Object> initialInput = new HashMap<>();
-        Map<String, Object> req = new HashMap<>();
-        req.put("username", "tester_ast");
-        initialInput.put("request", req);
+        Map<String, Object> request = new HashMap<>();
+        request.put("username", "tester_ast");
+        FlowExecutionResult result = executor.execute(flow, Map.of("request", request));
 
-        FlowExecutionResult result = executor.execute(flow, initialInput);
-
-        // 4. 断言
         assertNotNull(result);
-        Map<String, Object> ctxVars = (Map<String, Object>) result.getContext();
-        assertTrue(ctxVars.containsKey("request"));
+        assertTrue(result.getContextSnapshot().containsKey("request"));
 
-        // 验证 ParamResolveInterceptor 是否正确组装了 _resolvedArgs
-        Map<String, Object> modifiedConfig = node1.getConfig();
-        assertTrue(modifiedConfig.containsKey("_resolvedArgs"));
-        List<Object> args = (List<Object>) modifiedConfig.get("_resolvedArgs");
+        Object resolvedArgsObj = node.getConfig().get("_resolvedArgs");
+        assertNotNull(resolvedArgsObj);
 
-        // 应当包含组合好的 Map: { user: { name: "tester_ast", age: 18 } }
-        assertNotNull(args);
-        assertEquals(1, args.size());
+        @SuppressWarnings("unchecked")
+        List<Object> resolvedArgs = (List<Object>) resolvedArgsObj;
+        assertEquals(1, resolvedArgs.size());
 
-        Map<String, Object> arg0 = (Map<String, Object>) args.get(0);
-        assertTrue(arg0.containsKey("user"));
-        Map<String, Object> userArg = (Map<String, Object>) arg0.get("user");
-        assertEquals("tester_ast", userArg.get("name"));
-        assertEquals(18, userArg.get("age"));
+        @SuppressWarnings("unchecked")
+        Map<String, Object> arg0 = (Map<String, Object>) resolvedArgs.get(0);
+        assertEquals("tester_ast", arg0.get("name"));
+        assertEquals(18, arg0.get("age"));
+    }
+
+    @Test
+    void testParamPlansFeedServiceInputs() {
+        GenericApplicationContext springContext = new GenericApplicationContext();
+        springContext.registerBean("testParamService", TestParamService.class, TestParamService::new);
+        springContext.refresh();
+
+        try {
+            NodeExecutorRegistry registry = new NodeExecutorRegistry()
+                    .register("service", new ServiceNodeExecutor(springContext));
+            GraphExecutor executor = new GraphExecutor(registry, List.of(new ParamResolveInterceptor()));
+
+            Map<String, Object> paramPlans = new LinkedHashMap<>();
+            Map<String, Object> argPlan1 = new HashMap<>();
+            argPlan1.put("target", "name");
+            argPlan1.put("source", Map.of("kind", "ctx", "path", "request.username"));
+
+            Map<String, Object> argPlan2 = new HashMap<>();
+            argPlan2.put("target", "age");
+            argPlan2.put("source", Map.of("kind", "expr", "value", "20 + 1"));
+
+            paramPlans.put("argPlans", List.of(argPlan1, argPlan2));
+
+            Map<String, Object> config = new LinkedHashMap<>();
+            config.put("paramPlans", paramPlans);
+            config.put("inputs", List.of(
+                    Map.of("name", "name"),
+                    Map.of("name", "age")));
+            config.put("comp", Map.of(
+                    "bean", "testParamService",
+                    "configJson", "{\"method\":\"join\"}"));
+            config.put("as", "serviceResult");
+
+            NodeDefinition node = new NodeDefinition("service_node", "service", config, List.of());
+            FlowDefinition flow = new FlowDefinition("service_rule", Map.of(), List.of(node));
+
+            FlowExecutionResult result = executor.execute(flow, Map.of("request", Map.of("username", "alice")));
+
+            assertEquals("alice-21", result.getReturnValue());
+            assertEquals("alice-21", result.getContextSnapshot().get("serviceResult"));
+        } finally {
+            springContext.close();
+        }
+    }
+
+    @Test
+    void testBranchExecutesOnlySelectedEdge() {
+        NodeExecutorRegistry registry = new NodeExecutorRegistry()
+                .register("branch", new BranchNodeExecutor())
+                .register("set", new SetNodeExecutor());
+        GraphExecutor executor = new GraphExecutor(registry, List.of());
+
+        NodeDefinition branch = new NodeDefinition("branch_1", "branch", Map.of(), List.of());
+        NodeDefinition approved = new NodeDefinition("approved_node", "set",
+                Map.of("target", "route", "value", "approved"), List.of());
+        NodeDefinition rejected = new NodeDefinition("rejected_node", "set",
+                Map.of("target", "route", "value", "rejected"), List.of());
+
+        Map<String, Object> approveCondition = Map.of(
+                "op", "and",
+                "rules", List.of(Map.of(
+                        "op", "eq",
+                        "left", Map.of("kind", "ctx", "path", "request.status"),
+                        "right", Map.of("kind", "const", "constValue", "approved"))));
+        Map<String, Object> rejectCondition = Map.of(
+                "op", "and",
+                "rules", List.of(Map.of(
+                        "op", "eq",
+                        "left", Map.of("kind", "ctx", "path", "request.status"),
+                        "right", Map.of("kind", "const", "constValue", "rejected"))));
+
+        List<Map<String, Object>> edges = List.of(
+                Map.of("source", "branch_1", "target", "approved_node", "data",
+                        Map.of("priority", 1, "condition", approveCondition)),
+                Map.of("source", "branch_1", "target", "rejected_node", "data",
+                        Map.of("priority", 2, "condition", rejectCondition)));
+
+        FlowDefinition flow = new FlowDefinition("branch_rule", Map.of(),
+                List.of(branch, approved, rejected), edges);
+
+        FlowExecutionResult result = executor.execute(flow, Map.of("request", Map.of("status", "approved")));
+
+        assertEquals("approved", result.getContextSnapshot().get("route"));
+        assertEquals("approved", result.getReturnValue());
+    }
+
+    public static class TestParamService {
+        public String join(String name, Integer age) {
+            return name + "-" + age;
+        }
     }
 }
